<resources>
    <string name="app_name">Elec-App</string>
<!--    Bottom Navigation Menu-->
    <string name="home">Home</string>
    <string name="tutorial">Tutorial</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>

<!--    Fragment Home-->
    <string name="get_20_off">Get 20% Off</string>
    <string name="on_your">On Your</string>
    <string name="favourite_brands">Favourite Brands</string>
    <string name="featured_products">Popular Products</string>
    <string name="more_to_love">More to Love</string>

<!--    Activity Sign In-->
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_not_have_an_account">Don\'t have an account yet?</string>
    <string name="join_now">Join Now</string>

<!--    Activity Product Details-->
    <string name="back">Back</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="resistor">Resistor</string>
    <string name="lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.</string>

<!--    Activity Sign Up-->
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    
</resources>