<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#8C7FD8">

    <ImageView
        android:id="@+id/logoSignIn"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBodySignIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#D4D4D4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="25dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignIn"
                android:layout_width="280dp"
                android:layout_height="180dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSignIn"
                android:layout_marginTop="40dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/viewLine"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="#D4D4D4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"/>

                    <ImageView
                        android:id="@+id/logoUsername"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/logo_username"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/editUsername"
                        app:layout_constraintTop_toTopOf="@id/editUsername"
                        app:layout_constraintBottom_toBottomOf="@id/editUsername"
                        android:layout_marginStart="20dp"/>

                    <EditText
                        android:id="@+id/editUsername"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/bg_edit_text"
                        android:hint="@string/username"
                        app:layout_constraintStart_toEndOf="@id/logoUsername"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/viewLine"
                        android:layout_marginTop="10dp"/>

                    <ImageView
                        android:id="@+id/logoPassword"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/logo_password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/editPassword"
                        app:layout_constraintTop_toTopOf="@id/editPassword"
                        app:layout_constraintBottom_toBottomOf="@id/editPassword"
                        android:layout_marginStart="20dp"/>

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/bg_edit_text"
                        android:hint="@string/password"
                        app:layout_constraintStart_toEndOf="@id/logoPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewLine"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                app:layout_constraintStart_toStartOf="@id/cardSignIn"
                app:layout_constraintTop_toBottomOf="@id/cardSignIn"
                android:textColor="#6750EC"
                android:layout_marginTop="50dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/buttonSignIn"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:hint="@string/sign_in"
                android:backgroundTint="@color/black"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toEndOf="@id/txtForgotPassword"
                app:layout_constraintTop_toTopOf="@id/txtForgotPassword"
                app:layout_constraintBottom_toBottomOf="@id/txtForgotPassword"
                android:layout_marginStart="40dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/buttonTextSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign In"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_gravity="center"/>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/doNotHaveAnAccountYet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/txtForgotPassword"
                app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"
                android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/joinNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_now"
                android:textColor="#6750EC"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/doNotHaveAnAccountYet"
                app:layout_constraintTop_toTopOf="@id/doNotHaveAnAccountYet"
                android:textSize="16sp"
                android:layout_marginStart="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>