<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#8C7FD8">

    <ImageView
        android:id="@+id/logoSignIn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBodySignIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#D4D4D4">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="25dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSignIn"
                    android:layout_width="280dp"
                    android:layout_height="360dp"
                    app:cardCornerRadius="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtSignIn"
                    android:layout_marginTop="40dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/logoUsername"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/logo_username"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/editUsername"
                            app:layout_constraintTop_toTopOf="@id/editUsername"
                            app:layout_constraintBottom_toBottomOf="@id/editUsername"
                            android:layout_marginStart="20dp"/>

                        <EditText
                            android:id="@+id/editUsername"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/bg_edit_text"
                            android:hint="@string/username"
                            app:layout_constraintStart_toEndOf="@id/logoUsername"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/viewLine"
                            android:layout_marginTop="0dp"/>

                        <View
                            android:id="@+id/viewLine"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="#D4D4D4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/editUsername"
                            app:layout_constraintBottom_toTopOf="@id/editEmail"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"/>

                        <ImageView
                            android:id="@+id/logoEmail"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/logo_email"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/editEmail"
                            app:layout_constraintTop_toBottomOf="@id/viewLine"
                            app:layout_constraintBottom_toTopOf="@id/viewLine1"
                            android:layout_marginStart="20dp"/>

                        <EditText
                            android:id="@+id/editEmail"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/bg_edit_text"
                            android:hint="@string/email"
                            app:layout_constraintStart_toEndOf="@id/logoEmail"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/viewLine"
                            app:layout_constraintBottom_toTopOf="@id/viewLine1"/>

                        <View
                            android:id="@+id/viewLine1"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="#D4D4D4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/editEmail"
                            app:layout_constraintBottom_toTopOf="@id/editPassword"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"/>

                        <ImageView
                            android:id="@+id/logoPassword"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/logo_password"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/editPassword"
                            app:layout_constraintTop_toTopOf="@id/editPassword"
                            app:layout_constraintBottom_toBottomOf="@id/editPassword"
                            android:layout_marginStart="20dp"/>

                        <EditText
                            android:id="@+id/editPassword"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/bg_edit_text"
                            android:hint="@string/create_password"
                            app:layout_constraintStart_toEndOf="@id/logoPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/viewLine1"
                            app:layout_constraintBottom_toTopOf="@id/viewLine3"/>

                        <View
                            android:id="@+id/viewLine3"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="#D4D4D4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/editPassword"
                            app:layout_constraintBottom_toTopOf="@id/editPassword2"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"/>

                        <ImageView
                            android:id="@+id/logoPassword2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/logo_password2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/editPassword2"
                            app:layout_constraintTop_toTopOf="@id/editPassword2"
                            app:layout_constraintBottom_toBottomOf="@id/editPassword2"
                            android:layout_marginStart="20dp"/>

                        <EditText
                            android:id="@+id/editPassword2"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/bg_edit_text"
                            android:hint="@string/confirm_password"
                            app:layout_constraintStart_toEndOf="@id/logoPassword2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/viewLine3"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/buttonSignUp"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:hint="@string/sign_in"
                    android:backgroundTint="@color/black"
                    app:cardCornerRadius="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardSignIn"
                    android:layout_marginTop="40dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/buttonTextSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:layout_gravity="center"/>

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/alreadyHaveAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/cardSignIn"
                    app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
                    android:layout_marginTop="25dp"/>

                <TextView
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="#6750EC"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/alreadyHaveAnAccount"
                    app:layout_constraintTop_toTopOf="@id/alreadyHaveAnAccount"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>